--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -2,23 +2,52 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8">
-    <title>S. aureus vs S. epidermidis</title>
+    <title>TENGSA - Tenri Gram Staining Analyzer</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
   </head>
   <body>
-    <form method="post" action="/send" enctype="multipart/form-data">
-      <input type="file" id="img_file" name="img_file">
-      <input type="submit" value="Submit">
-    </form>
-    <p>
-        <ul>
+    <div class="jumbotron m-5">
+      <h1 class="display-4">TENGSA   <small class="text-muted">Tenri Gram Staining Analyzer</small></h1>
+      <p class="lead">黄色ブドウ球菌とコアグラーゼ陰性菌の鑑別を人工知能で自動化します</p>
+      <hr class="my-4">
+      <p>まずはファイルをアップロード</p>
+      <form method="post" action="/send" enctype="multipart/form-data">
+        <div class="input-group w-50">
+          <div class="custom-file">
+            <input type="file" name="img_file" class="custom-file-input" id="inputGroupFile04" aria-describedby="inputGroupFileAddon04">
+            <label class="custom-file-label" for="inputGroupFile04" data-browse="参照">ファイルを選んでください</label>
+          </div>
+          <div class="input-group-append">
+            <button class="btn btn-outline-primary" type="submit" value="Submit" id="inputGroupFileAddon04">分析</button>
+          </div>
+        </div>
+      </form>
+      {% if result %}
+        <hr class="my-4">
+        <h2 class="display-4">Result</h2>
+        <ul class="list-group list-group-flush">
           {% for res in result %}
-            <li>{{res.type}}: {{res.prob}}%</li>
+            <li class="list-group-item">{{res.type}}: {{res.prob}}%</li>
           {% endfor %}
         </ul>
-        <br>
         {% if img_url %}
-        <img src="{{ img_url }}">
+          <img src="{{ img_url }}" class="img-fluid" >
         {% endif %}
-    </p>
+      {% endif %}
+    </div>
+
+    <!-- Optional JavaScript -->
+    <script>
+      $('#inputGroupFile04').on('change',function(){
+          //get the file name
+          var fileName = $(this).prop('files')[0].name;
+          //replace the "Choose a file" label
+          $(this).next('.custom-file-label').html(fileName);
+      });
+    </script>
   </body>
 </html>
