--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -5,13 +5,19 @@
     <title>TENGSA - Tenri Gram Staining Analyzer</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <link rel=stylesheet type=text/css href="{{ url_for('static', filename='style.css') }}">
+
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
   </head>
   <body>
+    <nav class="navbar navbar-dark bg-dark">
+      <a href="./" class="navbar-brand">TENGSA</a>
+    </nav>
+
     <div class="jumbotron m-5">
-      <h1 class="display-4">TENGSA   <small class="text-muted">Tenri Gram Staining Analyzer</small></h1>
+      <h1 class="display-4">TENGSA online   <small class="text-muted">Tenri Gram Staining Analyzer</small></h1>
       <p class="lead">黄色ブドウ球菌とコアグラーゼ陰性菌の鑑別を人工知能で自動化します</p>
       <hr class="my-4">
       <p>まずはファイルをアップロード</p>
@@ -34,8 +40,23 @@
             <li class="list-group-item">{{res.type}}: {{res.prob}}%</li>
           {% endfor %}
         </ul>
-        {% if img_url %}
-          <img src="{{ img_url }}" class="img-fluid" >
+        {% if img_dir %}
+          <div id="gallery">
+            <script type="text/javascript">
+              let div_width = document.getElementById('gallery').clientWidth;
+              var w = "{{n_width|tojson}}";
+              var h = "{{n_height|tojson}}";
+              var img_size = div_width/w;
+
+              document.getElementById('gallery').style["grid-template-columns"] = "repeat(" + w + ", 1fr)";
+              for(var j=0; j<h; j++){
+                for(var i=0; i<w; i++){
+                    var filename = "{{ img_dir }}" + "/" + "{{ name }}" + "-" + ("000" + i).slice(-3) + "x" + ("000" + j).slice(-3) + ".png"; 
+                    document.write('<img src=' + filename + '  class="img-fluid" width=' + img_size + ' height=' + img_size + '>');
+                }
+              }
+            </script>
+          </div>
         {% endif %}
       {% endif %}
     </div>
