--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel=stylesheet type=text/css href="{{ url_for('static', filename='style.css') }}">
+    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
@@ -13,11 +14,11 @@
   </head>
   <body>
     <nav class="navbar navbar-dark bg-dark">
-      <a href="./" class="navbar-brand">TENGSA</a>
+      <a href="./" class="navbar-brand"><img src="{{ url_for('static', filename='favicon.png') }}" width="30" height="30" alt=""></a>
     </nav>
 
     <div class="jumbotron m-5">
-      <h1 class="display-3">TENGSA   <small class="text-muted">Tenri Gram Staining Analyzer</small></h1>
+      <h1 class="display-3">TENGSA online  <small class="text-muted">Tenri Gram Staining Analyzer</small></h1>
       <p class="lead">黄色ブドウ球菌とコアグラーゼ陰性菌の鑑別を人工知能で自動化します</p>
       <hr class="my-4">
       <p>まずはファイルをアップロード（分析には数分かかります）</p>
@@ -52,7 +53,6 @@
               var h = "{{n_height|tojson}}";
               var img_size = div_width/w;
               var probs = {{probs|tojson|safe}};
-              console.log(probs);
 
               document.getElementById('gallery').style["grid-template-columns"] = "repeat(" + w + ", 1fr)";
               for(var j=0; j<h; j++){
