--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -15,6 +15,7 @@
   <body>
     <nav class="navbar navbar-dark bg-dark">
       <a href="./" class="navbar-brand"><img src="{{ url_for('static', filename='favicon.png') }}" width="30" height="30" alt=""></a>
+      <a class="nav-item nav-link active" href="https://github.com/Riskchan/gram_staining">GitHub</a>
     </nav>
 
     <div class="jumbotron m-5">
